<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/minBrick"
    tools:context=".PuzzleMainActivity">

    <TextView
        android:id="@+id/puzzleCurrentState"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/puzzleGoalState"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/puzzleGoalState"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/currentState"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:text="@string/goalState"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/movesView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/moves"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/slideTile1"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide1"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleCurrentState" />

    <Button
        android:id="@+id/reset"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="reset"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/reset"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback" />

    <Button
        android:id="@+id/solve"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="solve"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/solve"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <Button
        android:id="@+id/next"

        android:layout_width="160dp"
        android:layout_height="40dp"
        android:enabled="false"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="next"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solve" />

    <Button
        android:id="@+id/slideTile2"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide2"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTile1" />

    <Button
        android:id="@+id/slideTile3"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTile2" />

    <Button
        android:id="@+id/slideTile4"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide4"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTile3" />

    <Button
        android:id="@+id/slideTile5"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide5"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide5"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTile4" />

    <Button
        android:id="@+id/slideTile6"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide6"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide6"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTile5" />

    <Button
        android:id="@+id/slideTile7"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide7"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide7"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTile6" />

    <Button
        android:id="@+id/slideTile8"

        android:layout_width="160dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="trySlide8"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/puzzleSlide8"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTile7" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleGoalState" />

    <TextView
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/slideTile6"
        app:layout_constraintTop_toBottomOf="@+id/benchmarks" />

    <Spinner
        android:id="@+id/benchmarks"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:spinnerMode="dropdown"
        android:text="@string/benchmarks"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/benchmarks"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />
</androidx.constraintlayout.widget.ConstraintLayout>