<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/minOrange"
    tools:context=".FarmerMainActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/currentState"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/farmerGoalState"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="@string/goalState"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/farmerGoalState"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/farmerCurrentState"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/farmerGoalState"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/moves"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/farmerCurrentState"
        app:layout_constraintStart_toEndOf="@+id/farmerGoalState"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movesView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toStartOf="@+id/farmerCurrentState"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/farmerGoalState"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/goesAlon"

        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="tryGoesAlone"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/farmerMove1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farmerGoalState" />

    <Button
        android:id="@+id/takesWolf"

        android:layout_width="180dp"
        android:layout_height="54dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="tryTakesWolf"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/farmerMove2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goesAlon" />

    <Button
        android:id="@+id/reset"

        android:layout_width="140dp"
        android:layout_height="54dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="reset"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/reset"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback" />

    <Button
        android:id="@+id/takesGoat"

        android:layout_width="180dp"
        android:layout_height="54dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="tryTakesGoat"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/farmerMove3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takesWolf" />

    <Button
        android:id="@+id/takesCabbage"

        android:layout_width="180dp"
        android:layout_height="54dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="tryTakesCabbage"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/farmerMove4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takesGoat" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goesAlon"
        app:layout_constraintTop_toBottomOf="@+id/farmerCurrentState" />

    <Button
        android:id="@+id/next"

        android:layout_width="140dp"
        android:layout_height="54dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="next"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solve" />

    <Button
        android:id="@+id/solve"

        android:layout_width="140dp"
        android:layout_height="54dp"
        android:enabled="false"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_top_buttonshape"
        android:onClick="solve"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/solve"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <TextView
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takesCabbage" />

    <Spinner
        android:id="@+id/benchmarks"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:spinnerMode="dropdown"
        android:text="@string/benchmarks"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/benchmarks"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />


</androidx.constraintlayout.widget.ConstraintLayout>